--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
 body{
 	font-family: sans-serif;
-	background: #f5ff67;
+	background: #b7cac9;
+}
+
+.inapp{
+	font-family: sans-serif;
+	background: #fdfdfd;
 }
  
+.muka{
+	background: url(src/bg2.png)
+}
+
+.welcome{
+	margin: 295px 469px;
+}
+
 h1{
 	text-align: center;
 	/*ketebalan font*/
 	font-weight: 500;
-	color: #807e09
+	color: #5f5f5f
 }
 
 h3{
@@ -25,6 +38,7 @@ h4{
 	text-align: center;
 	/*membuat semua huruf menjadi kapital*/
 	text-transform: uppercase;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
  
 .kotak{
@@ -76,14 +90,53 @@ label{
 
 .tombol{
 	width: 100%;
-	background:#2C97DF;
+	background:rgb(245, 155, 21);
 	color:white;
 	border-top:0;
 	border-left:0;
 	border-right:0;
-	border-bottom:5px solid #2A80B9;
-	padding:10px 20px;
+	border-bottom:5px solid rgb(187, 120, 19);
+	padding: 11px 25px;
 	text-decoration:none;
 	font-family:sans-serif;
-	font-size:11pt;
-  }
+	font-size: 18pt;
+	margin: 19px;
+}
+
+#outtable{
+	padding: 20px;
+	border:1px solid #e3e3e3;
+	width:600px;
+	border-radius: 5px;
+}
+
+.short{
+	width: 50px;
+}
+
+.normal{
+	width: 150px;
+}
+table{
+	border-collapse: collapse;
+	font-family: arial;
+	color:#5E5B5C;
+}
+
+thead th{
+	text-align: left;
+	padding: 10px;
+}
+
+tbody td{
+	border-top: 1px solid #e3e3e3;
+	padding: 10px;
+}
+
+tbody tr:nth-child(even){
+	background: #F6F5FA;
+}
+
+tbody tr:hover{
+	background: #EAE9F5
+}
