--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ label{
 .normal{
 	width: 150px;
 }
-table{
+
+.table1{
 	border-collapse: collapse;
 	font-family: arial;
 	color:#5E5B5C;
@@ -140,3 +141,63 @@ tbody tr:nth-child(even){
 tbody tr:hover{
 	background: #EAE9F5
 }
+
+/* The container must be positioned relative: */
+.kustom-select {
+	position: relative;
+	font-family: Arial;
+  }
+  
+  .kustom-select select {
+	display: none; /*hide original SELECT element: */
+  }
+  
+  .select-selected {
+	background-color: DodgerBlue;
+  }
+  
+  /* Style the arrow inside the select element: */
+  .select-selected:after {
+	position: absolute;
+	content: "";
+	top: 14px;
+	right: 10px;
+	width: 0;
+	height: 0;
+	border: 6px solid transparent;
+	border-color: #fff transparent transparent transparent;
+  }
+  
+  /* Point the arrow upwards when the select box is open (active): */
+  .select-selected.select-arrow-active:after {
+	border-color: transparent transparent #fff transparent;
+	top: 7px;
+  }
+  
+  /* style the items (options), including the selected item: */
+  .select-items div,.select-selected {
+	color: #ffffff;
+	padding: 8px 16px;
+	border: 1px solid transparent;
+	border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+	cursor: pointer;
+  }
+  
+  /* Style items (options): */
+  .select-items {
+	position: absolute;
+	background-color: rgb(100, 100, 100);
+	top: 100%;
+	left: 0;
+	right: 0;
+	z-index: 99;
+  }
+  
+  /* Hide the items when the select box is closed: */
+  .select-hide {
+	display: none;
+  }
+  
+  .select-items div:hover, .same-as-selected {
+	background-color: rgba(0, 0, 0, 0.1);
+  }
